[project]
name = "churn-d365"
version = "0.1.0"
description = "Previsão de churn de contas no Dynamics 365 com PyTorch, FastAPI e Power Platform"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Rafael Maiorino" }]
readme = "README.md"

dependencies = [
    # ML core
    "torch>=2.2",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "mlflow>=2.12",
    # Viz / EDA
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    # Dataverse / Azure
    "msal>=1.28",
    "azure-identity>=1.16",
    "requests>=2.31",
    "python-dotenv>=1.0",
    # Validação de schema
    "pandera>=0.18",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"